--- a/tex/publications.tex
+++ b/tex/publications.tex
@@ -13,6 +13,13 @@ We reproduce the current version as of July 2021 in the following.
 \section{Works as principal author}
 \subsection*{Papers}
 \begin{itemize}
+	\item T. Weber, D. M. Fobes, J. Waizner, P. Steffens, G. S. Tucker,
+	M. B\"ohm, L. Beddrich, C. Franz, H. Gabold, R. Bewley,
+	D. Voneshen, M. Skoulatos, R. Georgii, G. Ehlers, A. Bauer,
+	C. Pfleiderer, P. B\"oni, M. Janoschek, and M. Garst, 
+	\textit{Emergent Landau levels of magnons in a skyrmion lattice},
+	submitted, in review.
+
 	\item T. Weber, \textit{Update 2.0 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)},
 	SoftwareX, Volume 14, 100667 (June 2021),
 	DOI: \href{https://doi.org/10.1016/j.softx.2021.100667}{10.1016/j.softx.2021.100667}.
