--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -774,6 +774,18 @@
 
 @misc
 {
+	web_boost_geometry_rtree,
+	title = {{Class rtree, part of the Boost.Geometry C++ Library \cite{web_boost_geometry} (Software)}},
+	author = {Barend Gehrels and Bruno Lalande and Mateusz Loskot and Adam Wulkiewicz and Menelaos Karavelas and Vissarion Fisikopoulos},
+	year = {2009-2021},
+	url = "https://www.boost.org/doc/libs/1_77_0/libs/geometry/doc/html/geometry/reference/spatial_indexes/boost__geometry__index__rtree.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_77_0/libs/geometry/doc/html/geometry/reference/spatial_indexes/boost__geometry__index__rtree.html}",
+	note = "[Online; accessed 13-August-2021]",
+}
+
+
+@misc
+{
 	web_boost_polygon_voronoi,
 	title = {{Voronoi extensions, part of the Boost.Polygon C++ library \cite{web_boost_polygon} (Software)}},
 	author = {Andrii Sydorchuk},
