started with gl chapter

--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -161,6 +161,7 @@ and have to be considered carefully in the set-up of an experiment.
 
 
 \subsection{Main workspace}
+\label{sec:gui_gl}
 The largest portion of the screen is reserved for the workspace.
 A typical view is shown in element (c) of Fig. \ref{fig:gui}.
 Here, a graphical representation of the instrument and the walls as well as the interaction
@@ -172,6 +173,7 @@ window (f) and can also be entered directly.
 The workspace is not restricted to a passive view of the instrument, but also functions as an editor.
 as it allows for an easy insertion, editing and removal of wall segments. The segments as well as the
 instrument axes themselves can be dynamically moved by dragging them using the mouse.
+More details on the various aspects of \textit{OpenGL} rendering are given in chapter \ref{ch:gl}.
 
 
 
