--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -423,6 +423,29 @@
 
 @misc
 {
+	wiki_gl_history,
+	author = {{OpenGL Wiki contributors}},
+	title = {{History of Programmability --- OpenGL Wiki}},
+	year = "2015",
+	url = "https://www.khronos.org/opengl/wiki_opengl/index.php?title=History_of_Programmability&oldid=11835",
+	OPThowpublished = "\url{https://www.khronos.org/opengl/wiki_opengl/index.php?title=History_of_Programmability&oldid=11835}",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
+	wiki_glsl,
+	author = {{OpenGL Wiki contributors}},
+	title = {{OpenGL Shading Language --- OpenGL Wiki}},
+	year = "2021",
+	url = "https://www.khronos.org/opengl/wiki_opengl/index.php?title=OpenGL_Shading_Language&oldid=14750",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
 	wiki_fractional,
 	author = {{Wikipedia contributors}},
 	title = {{Fractional coordinates --- {Wikipedia}{,} The Free Encyclopedia}},
@@ -902,6 +925,18 @@
 	OPThowpublished = "\url{http://www.swig.org/}",
 	note = "[Online; accessed 2-August-2021]",
 }
+
+
+@misc
+{
+	web_gl_matrixmode,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glMatrixMode --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glMatrixMode.xml",
+	note = "[Online; accessed 16-August-2021]"
+}
+
 
 % -----------------------------------------------------------------------------
 
