--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -80,6 +80,7 @@
 \appendix
 %\part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
+\input{tex/gl.tex}
 \input{tex/notation.tex}
 \input{tex/publications.tex}
 \input{tex/errata.tex}
