--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -458,6 +458,30 @@
 
 @misc
 {
+	wiki_skewsymm,
+	author = {{Wikipedia contributors}},
+	title = {{Skew-symmetric matrix --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Skew-symmetric_matrix&oldid=1028005467",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Skew-symmetric_matrix&oldid=1028005467}",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
+	wiki_rodrigues,
+	author = {{Wikipedia contributors}},
+	title = {{Rodrigues' rotation formula --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Rodrigues%27_rotation_formula&oldid=1033970128",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Rodrigues%27_rotation_formula&oldid=1033970128}",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
 	wiki_fission,
 	author = {{Wikipedia contributors}},
 	title = {{Discovery of nuclear fission --- {Wikipedia}{,} The Free Encyclopedia}},
