--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -962,6 +962,50 @@
 }
 
 
+@misc
+{
+	web_gl_viewport,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glViewport --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glViewport.xml",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
+	web_gl_ortho,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glOrtho --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glOrtho.xml",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
+	web_gl_perspective,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{gluPerspective --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/gluPerspective.xml",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
+@misc
+{
+	web_gl_unproject,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{gluUnProject --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/gluUnProject.xml",
+	note = "[Online; accessed 16-August-2021]"
+}
+
+
 % -----------------------------------------------------------------------------
 
 
